<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appRelativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_background_color"
    android:columnCount="5"
    android:orientation="vertical"
    tools:ignore="Deprecated" >

    <Space
        android:layout_width="1dp"
        android:layout_height="21dp"
        android:layout_column="0"
        android:layout_row="0" />

    <Space
        android:layout_width="1dp"
        android:layout_height="62dp"
        android:layout_column="0"
        android:layout_row="1" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_row="2" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/sysTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sys_parameter_personal_health_panel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/sysEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:editable="false"
                android:ems="10"
                android:inputType="none" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/diaTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dia_parameter_personal_health_panel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/diaEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:editable="false"
                android:ems="10"
                android:inputType="none" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/pulTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pulse_parameter_personal_health_panel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/pulEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:editable="false"
                android:ems="10"
                android:inputType="none" />
        </TableRow>
    </TableLayout>

    <Space
        android:layout_width="1dp"
        android:layout_height="17dp"
        android:layout_column="0"
        android:layout_row="3" />

    <Space
        android:layout_width="1dp"
        android:layout_height="133dp"
        android:layout_column="0"
        android:layout_row="4" />

    <Space
        android:layout_width="21dp"
        android:layout_height="1dp"
        android:layout_column="0"
        android:layout_row="0" />

    <Space
        android:layout_width="27dp"
        android:layout_height="1dp"
        android:layout_column="1"
        android:layout_row="0" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="4"
        android:layout_gravity="left"
        android:layout_marginLeft="0dp"
        android:layout_row="1"
        android:gravity="center"
        android:text="@string/title_activity_personal_health_panel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="14pt" />

    <Space
        android:layout_width="19dp"
        android:layout_height="1dp"
        android:layout_column="2"
        android:layout_row="0" />

    <Space
        android:layout_width="25dp"
        android:layout_height="1dp"
        android:layout_column="3"
        android:layout_row="0" />

    <ToggleButton
        android:id="@+id/toggleButtonBloodPressure"
        android:layout_width="220dp"
        android:layout_height="185dp"
        android:layout_column="3"
        android:layout_columnSpan="2"
        android:layout_gravity="left"
        android:layout_row="4"
        android:textOff="@string/off_button_personal_health_panel"
        android:textOn="@string/on_button_personal_health_panel"/>

    <Space
        android:layout_width="226dp"
        android:layout_height="1dp"
        android:layout_column="4"
        android:layout_row="0" />

</GridLayout>